codex-rs/tui/src/snapshots/codex_tui__tooltips__tests__desktop_app_tip_macos.snap
---
source: tui/src/tooltips.rs
assertion_line: 468
expression: rendered
---
Line::from_iter([Span::from("Tip:").bold(), Span::from(" Use the "), Span::from("desktop app").bold(), Span::from(". Run "), Span::from("codex app").cyan()]) []
Line::from("to open it. It installs automatically if") []
Line::from("needed.") []
