codex-rs/tui/src/snapshots/codex_tui__tooltips__tests__desktop_app_tip_windows.snap
---
source: tui/src/tooltips.rs
assertion_line: 468
expression: rendered
---
Line::from_iter([Span::from("Tip:").bold(), Span::from(" Use the "), Span::from("desktop app").bold(), Span::from(". Install it")]) []
Line::from("from") []
Line::from(Span::from("https://chatgpt.com/codex?app-landing-page=true").cyan().underlined()) [TerminalHyperlink { columns: 0..47, destination: "https://chatgpt.com/codex?app-landing-page=true", destination_kind: Web }]
Line::from_iter([Span::from("and run "), Span::from("codex app").cyan(), Span::from(".")]) []
